--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ build
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-2e367151d1bb2b54af088ff7ad23dd43d65b4dcd
+yarn-error.log* 
+package-lock.json
+
 .env
+/uploads/*.jpg
